--- a/HumphreyJ.NetCore.MKHX.Web/Views/_ViewImports.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using HumphreyJ.NetCore.MKHX.GameData
 @using HumphreyJ.NetCore.MKHX.Web.Models.Helpers
 @using HumphreyJ.NetCore.MKHX.DataBase
+@using HumphreyJ.NetCore.MKHX.GameData.Enum
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
