改进服务器列表显示逻辑

--- a/HumphreyJ.NetCore.MKHX.Web/Views/CardData/detail.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/CardData/detail.cshtml
@@ -433,9 +433,9 @@
                             indicator: [
                                 { text: '进攻', max: 100 },
                                 { text: '生存', max: 100 },
-                                { text: '开销', max: 100 },
                                 { text: '稳定', max: 100 },
-                                { text: '机动', max: 100 }
+                                { text: '开销', max: 100 },
+                              { text: '机动', max: 100 }
                             ],
                             radius: size
                         }
@@ -453,7 +453,7 @@
                             },
                             data: [
                                 {
-                                    value: [~~data.attack, ~~data.defend, ~~data.cost, ~~data.stability, ~~data.mobility],
+                                    value: [~~data.attack, ~~data.defend, ~~data.stability, ~~data.cost, ~~data.mobility],
                                     name: $('#CardName').text()
                                 }
                             ]
