地图详情版面修正

--- a/HumphreyJ.NetCore.MKHX.Web/Views/MapStageData/MapStage.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/MapStageData/MapStage.cshtml
@@ -115,7 +115,7 @@
                         if (c != null)
                         {
                             <br>
-                            <span style="margin-left: 2em; display: inline-block;">3星通关探索奖励：<span id="HideChip"><a href="/carddata/detail/@(card)">@c.CardName)</a>碎片</span>（概率：<span id="ChipRate">@(Model.ChipRate / 10)%</span>）</span>
+                            <span style="margin-left: 2em; display: inline-block;">3星通关探索奖励：<span id="HideChip"><a href="/carddata/detail/@(card)">@c.CardName</a>碎片</span>（概率：<span id="ChipRate">@(Model.ChipRate / 10)%</span>）</span>
                         }
                     }
                     <br>
