修正到GitHub的链接

--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Footer.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Footer.cshtml
@@ -3,7 +3,7 @@
         <div class="row small">
             <div class="col-lg-12">
                 <p class="float-right">
-                    此项目源代码托管在<a href="https://github.com/tlos142857/https://github.com/tlos142857/HumphreyJ.Netcore.MKHX" target="_blank">GitHub</a>，欢迎共同完善！
+                    此项目源代码托管在<a href="https://github.com/tlos142857/HumphreyJ.Netcore.MKHX" target="_blank">GitHub</a>，欢迎共同完善！
                 </p>
                 <p>
                     <a class="d-inline-block mr-3" href="https://www.humphreyj.com" target="_blank">©@(DateTime.Now.Year) HumphreyJ.com</a>
