报错反馈引导至GitHub

--- a/HumphreyJ.NetCore.MKHX.Web/Views/Home/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="alert alert-info" role="alert">
             <p>这是一个未完成的版本，内容可能会随时更改。</p>
-            <p>如果你发现了什么问题，欢迎到 <a href="/feedback">报错/反馈</a> 模块进行反馈</p>
+            <p>如果你发现了什么问题，欢迎到 <a href="https://github.com/tlos142857/HumphreyJ.Netcore.MKHX/issues">报错/反馈</a> 模块进行反馈</p>
         </div>
         @if ((Context.Request.Headers["User-Agent"] + "").ToLower().Contains("edge/"))
         {
