--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Navbar.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Navbar.cshtml
@@ -35,7 +35,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/feedback" target="_blank">报错/反馈</a>
+                    <a class="nav-link" href="https://github.com/tlos142857/HumphreyJ.Netcore.MKHX/issues" target="_blank">报错/反馈</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav ml-auto">
