修正关于页版面

--- a/HumphreyJ.NetCore.MKHX.Web/Views/About/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/About/Index.cshtml
@@ -3,9 +3,16 @@
     ViewData["Title"] = "关于 ";
 }
 
-<h2>@(ViewData["Title"])</h2>
+<div class="container">
+    <h5 class="pt-3 d-none d-md-block">@ViewBag.Title</h5>
 
-<ul>
-    <li><a href="https://github.com/tlos142857/HumphreyJ.Netcore.MKHX">GitHub项目地址</a></li>
-    <li><a href="https://github.com/tlos142857/HumphreyJ.Netcore.MKHX/commits/master">主线版本更新记录</a></li>
-</ul>
+    <article class="pt-3">
+
+        <ul>
+            <li><a href="https://github.com/tlos142857/HumphreyJ.Netcore.MKHX">GitHub项目地址</a></li>
+            <li><a href="https://github.com/tlos142857/HumphreyJ.Netcore.MKHX/commits/master">主线版本更新记录</a></li>
+        </ul>
+
+    </article>
+</div>
+
