Chrome浏览器下设置卡牌头像大小

--- a/HumphreyJ.NetCore.MKHX.Web/Views/CardData/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/CardData/Index.cshtml
@@ -37,13 +37,13 @@
 
 <style>
     .mkhx-card-list { margin: auto; }
-    .mkhx-card-list img { width:110px;height:110px; }
+        .mkhx-card-list img { width: 110px; height: 110px; }
         .mkhx-card-list .btn { float: left; }
             .mkhx-card-list .btn img { width: auto; height: auto; }
             .mkhx-card-list .btn span { width: 7em; display: inline-block; text-align: left; }
         .mkhx-card-list a.img-thumbnail { position: relative; }
             .mkhx-card-list a.img-thumbnail img { width: 1.5em; height: 1.5em; position: absolute; left: 0.35em; top: 0.5em; }
-                .mkhx-card-list a.img-thumbnail img.img_mobile { position: static; width: 110px; height: 110px; }
+                .mkhx-card-list a.img-thumbnail img.img_mobile { position: static; display: inline-block; width: 110px; height: 110px; }
             .mkhx-card-list a.img-thumbnail span.CardName { position: absolute; left: 2em; top: 1.1em; color: #FFF; text-shadow: 0 0 4px #000; text-shadow: 0 0 2px 1px #000; }
             .mkhx-card-list a.img-thumbnail span.Color { position: absolute; left: 2em; top: 0.1em; color: #FFF; text-shadow: 0 0 4px #000; text-shadow: 0 0 2px 1px #000; }
 </style>
