--- a/HumphreyJ.NetCore.MKHX.Web/Views/Article/Card2d.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Article/Card2d.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HumphreyJ.NetCore.MKHX.GameData.ParsedCardData>
+﻿@model IEnumerable<ParsedCardData>
 
 @{
     ViewData["Title"] = "Card2d";
