卡牌列表增加到卡牌分解等级的文章链接

--- a/HumphreyJ.NetCore.MKHX.Web/Views/CardData/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/CardData/Index.cshtml
@@ -271,6 +271,11 @@
                 }
             case "rank":
                 {
+
+                    <div class="alert alert-info">
+                        若要查阅详细的卡牌分解合成关系，请移步 <a href="article/bfa39046-cb65-45fc-93ed-c15cd47fc3da">卡牌分解等级</a>
+                    </div>
+
                     var groups = Model.GroupBy(m => m.Rank);
                     foreach (var group in groups)
                     {
