文章内容修改

--- a/HumphreyJ.NetCore.MKHX.Web/Views/Article/CardFragment.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Article/CardFragment.cshtml
@@ -20,7 +20,7 @@
                 <li>获得的卡牌碎片在当前卡牌对片等级的 ±2 范围内</li>
                 <li>获得三种碎片，基数为 20.00、10.00、10.00，并有少量波动</li>
                 <li>如果是 15 级的卡牌，基数乘以 2 倍</li>
-                <li>数量随机加倍，可能的倍数范围是 0.6 - 5 倍</li>
+                <li>数量随机加倍，可能的倍数范围是 0.6 ~ 5 倍，但概率不均等</li>
                 <li>最后向下取整得到最终数量</li>
             </ol>
         </header>
